tests/bad_path_namespace_with_same_name/objects.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blue
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
---
apiVersion: v1
kind: Namespace
metadata:
  name: blue
---
apiVersion: v1
kind: Pod
metadata:
  name: webserver
  namespace: blue
spec:
  containers:
  - args:
    - "netexec"
    - "--http-port"
    - "9000"
    image: registry.k8s.io/e2e-test-images/agnhost:2.45
    imagePullPolicy: IfNotPresent
    name: agnhost-container
  nodeName: ovn-worker
  restartPolicy: Always
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: blue
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
